add content and turkey image

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-hello world!
+<!DOCTYPE html>
+</html>
+<head>
+	<title>Jason Turkey</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+<div class="container">
+	<p>Perhaps you meant <a href="https://jasonturley.xyz">jasonturley.xyz</a>?</p>
+
+	<img src="images/turkey.jpg">
+</div>
+</body>
+</html>
