add fun fact footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 	<p>Perhaps you meant <a href="https://jasonturley.xyz">jasonturley.xyz</a>?</p>
 
 	<img src="images/turkey.jpg">
+
+	<footer>
+		<strong>Fun Turkey Fact:</strong> <span id="fact"></span>
+	</footer>
 </div>
+
+<script src="main.js"></script>
 </body>
 </html>
